Use -XX:+UseCGroupMemoryLimitForHeap if no -Xmx jvm option